# sdl-game

./: .clang-format  .clang-tidy  .gitignore  CMakeEnv.json  CMakeLists.txt  CMakePresets.json  LICENSE.txt  Makefile  todo.txt
cmake/: vars.cmake
sdl-game/: CMakeLists.txt  sdl-game.cpp  sdl-game.h
sources/game/: CMakeLists.txt  error.cpp  game.cpp  main.cpp
sources/game/include/game/: error.h  game.h  metadata.h
sources/sdlpp/: CMakeLists.txt  sdlpp.cpp
sources/sdlpp/include/sdlpp/: error.h  events.h  hints.h  init.h  log.h  timer.h  video.h
